.argocd/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    app.openshift.io/vcs-ref: main
    app.openshift.io/vcs-uri: https://github.com/henriorespati/hello-vertx.git
  labels:
    app: hello-vertx
    group: com.redhat.rharyanto.hellovertx
    app.kubernetes.io/part-of: com.redhat.rharyanto.hellovertx
    app.kubernetes.io/name: hello-vertx
  name: hello-vertx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello-vertx
      group: com.redhat.rharyanto.hellovertx
      app.kubernetes.io/name: hello-vertx
      app.kubernetes.io/part-of: com.redhat.rharyanto.hellovertx
  template:
    metadata:
      annotations:
        app.openshift.io/vcs-ref: main
        app.openshift.io/vcs-uri: https://github.com/henriorespati/hello-vertx.git
      labels:
        app: hello-vertx
        group: com.redhat.rharyanto.hellovertx
        app.kubernetes.io/part-of: com.redhat.rharyanto.hellovertx
        app.kubernetes.io/name: hello-vertx
    spec:
      containers:
      - env:
        - name: JAVA_OPTIONS
          value: -Dvertx.cacheDirBase=/tmp/vertx-cache -Dvertx.disableDnsResolver=true
            -Xms32m -Xmx512m -Dapp=hello-vertx -Dvertx.hazelcast.config=classpath:hazelcast.xml
        - name: VERTX_CONFIG_PATH
          value: conf/application.yaml
        - name: HZ_MODE
          value: file
        - name: KUBERNETES_NAMESPACE
          valueFrom:
            fieldRef:
              fieldPath: metadata.namespace
        image: image-registry.openshift-image-registry.svc:5000/hello-vertx/hello-vertx:latest
        imagePullPolicy: IfNotPresent
        name: vertx
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        - containerPort: 9779
          name: prometheus
          protocol: TCP
        - containerPort: 8778
          name: jolokia
          protocol: TCP
        securityContext:
          privileged: false
        resources: 
          requests: 
            cpu: "0.1"
            memory: "64Mi"
          limits: 
            cpu: "0.5"
            memory: "1Gi"
