.argocd/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    prometheus.io/path: /metrics
    prometheus.io/port: "9779"
    prometheus.io/scrape: "true"
    app.openshift.io/vcs-ref: main
    app.openshift.io/vcs-uri: https://github.com/henriorespati/hello-vertx.git
  labels:
    app: hello-vertx
    group: com.redhat.rharyanto.hellovertx
    app.kubernetes.io/part-of: com.redhat.rharyanto.hellovertx
    app.kubernetes.io/name: hello-vertx
  name: hello-vertx
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: hello-vertx
    group: com.redhat.rharyanto.hellovertx
    app.kubernetes.io/name: hello-vertx
    app.kubernetes.io/part-of: com.redhat.rharyanto.hellovertx
